SCs-language-server/src/syntax/scsParser.js
// Generated from ./src/syntax/scs.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import scsListener from './scsListener.js';
import scsVisitor from './scsVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class scsParser extends antlr4.Parser {

    static grammarFileName = "scs.g4";
    static literalNames = [ null, "'_'", "';;'", "'<>'", "'-```'", "'~```'", "'=>'", 
		"'->'", "'~>'", "'/>'", "'%>'", "'_=>'", "'_->'", "'_~>'", "'_/>'", "'_%>'", 
		"'?=>'", "'?->'", "'?~>'", "'?/>'", "'?%>'", "'-?>'", "'?-?>'", "'_-?>'", "'~?>'", 
		"'?~?>'", "'_~?>'", "'%?>'", "'?%?>'", "'_%?>'", "'-|>'", "'_-|>'", "'?-|>'", "'~|>'", 
		"'_~|>'", "'?~|>'", "'%|>'", "'_%|>'", "'?%|>'", "'<=>'", "'_<=>'", "'?<=>'", "'<-'", 
		"'<='", "'<~'", "'</'", "'<%'", "'<-?'", "'<=?'", "'<~?'", "'</?'", "'<%?'", "'<-_'", 
		"'<=_'", "'<~_'", "'</_'", "'<%_'", "'<?-?'", "'<?-'", "'<?-_'", "'<?~?'", "'<?%?'", 
		"'<?~'", "'<?~_'", "'<?%'", "'<?%_'", "'<|-?'", "'<|~?'", "'<|%?'", "'<|-'", "'<|~'", 
		"'<|%'", "'<|-_'", "'<|~_'", "'<|%_'", "'..>'", "'?..>'", "'_..>'", "'..?>'", "'_..?>'", 
		"'?..?>'", "'..|>'", "'_..|>'", "'?..|>'", "'.>'", "'_.>'", "'<..'", "'<..?'", "'<.._'", 
		"'<?..'", "'<?..?'", "'<?.._'", "'<|..'", "'<|..?'", "'<|.._'", "'<.'", "'<._'", "'_??>'",
		"'_?|>'", "'??>'", "'?|>'", "'<??'", "'<??_'", "'<|?'", "'<|?_'", "'?.?>'", "'??|>'", 
		"'<?.?'", "'<|??'", "'...'", "'='", "'sc_node'", "'sc_link'", "'sc_common_arc'",  
		"'sc_common_edge'", "'sc_main_arc'", "'sc_membership_arc'", "'#'", "'('", "')'", 
		"'{'", "'}'", "';'", "'(*'", "'*)'", "'|'", null, null, "'[*'", "'*]'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             "ID_SYSTEM", "ALIAS_SYMBOLS", "CONTOUR_BEGIN", 
                             "CONTOUR_END", "CONTENT_BODY", "LINK", "EDGE_ATTR", 
                             "LINE_TERMINATOR", "LINE_COMMENT", "MULTINE_COMMENT", 
                             "WS" ];
    static ruleNames = [ "content", "contour", "connector", "syntax", "sentence_wrap", 
                         "sentence", "idtf_alias", "idtf_system", "sentence_assign", 
                         "sentence_assign_contour", "idtf_lvl1_preffix", 
                         "idtf_lvl1_value", "idtf_lvl1", "idtf_edge", "idtf_set", 
                         "idtf_set_elements", "idtf_atomic", "idtf_url", 
                         "idtf_common", "idtf_list", "internal_sentence", 
                         "internal_sentence_list", "sentence_lvl1", "sentence_lvl_4_list_item", 
                         "sentence_lvl_common", "attr_list" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = scsParser.ruleNames;
        this.literalNames = scsParser.literalNames;
        this.symbolicNames = scsParser.symbolicNames;
    }



	content() {
	    let localctx = new ContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, scsParser.RULE_content);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 53;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 52;
	            this.match(scsParser.T__0);
	        }

	        this.state = 55;
	        localctx.c = this.match(scsParser.CONTENT_BODY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	contour() {
	    let localctx = new ContourContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, scsParser.RULE_contour);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this.match(scsParser.CONTOUR_BEGIN);

	        this.state = 64;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294967290) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 2146435071) !== 0) || ((((_la - 64)) & ~0x1f) === 0 && ((1 << (_la - 64)) & 14085) !== 0)) {
	            this.state = 62;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 58;
	                this.sentence_wrap();
	                break;

	            case 2:
	                this.state = 59;
	                this.sentence_lvl_4_list_item();
	                this.state = 60;
	                this.match(scsParser.T__1);
	                break;

	            }
	            this.state = 66;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 67;
	        this.match(scsParser.CONTOUR_END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	connector() {
	    let localctx = new ConnectorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, scsParser.RULE_connector);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        localctx.c = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294967288) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 524287) !== 0))) {
	            localctx.c = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	syntax() {
	    let localctx = new SyntaxContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, scsParser.RULE_syntax);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===5 || ((((_la - 51)) & ~0x1f) === 0 && ((1 << (_la - 51)) & 115388413) !== 0)) {
	            this.state = 71;
	            this.sentence_wrap();
	            this.state = 76;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 77;
	        this.match(scsParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentence_wrap() {
	    let localctx = new Sentence_wrapContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, scsParser.RULE_sentence_wrap);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.sentence();
	        this.state = 80;
	        this.match(scsParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentence() {
	    let localctx = new SentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, scsParser.RULE_sentence);
	    try {
	        this.state = 86;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 82;
	            this.sentence_lvl1();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 83;
	            this.sentence_assign();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 84;
	            this.sentence_assign_contour();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 85;
	            this.sentence_lvl_common();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_alias() {
	    let localctx = new Idtf_aliasContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, scsParser.RULE_idtf_alias);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(scsParser.ALIAS_SYMBOLS);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_system() {
	    let localctx = new Idtf_systemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, scsParser.RULE_idtf_system);
	    try {
	        this.state = 93;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 72:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 90;
	            this.match(scsParser.ID_SYSTEM);
	            break;
	        case 51:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 91;
	            this.match(scsParser.T__50);
	            break;
	        case 53:
	        case 54:
	        case 55:
	        case 56:
	        case 57:
	        case 58:
	        case 59:
	        case 60:
	        case 61:
	        case 62:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 92;
	            localctx.type = this.idtf_lvl1_preffix();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentence_assign() {
	    let localctx = new Sentence_assignContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, scsParser.RULE_sentence_assign);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.match(scsParser.ALIAS_SYMBOLS);
	        this.state = 96;
	        this.match(scsParser.T__51);
	        this.state = 97;
	        localctx.i = this.idtf_common();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentence_assign_contour() {
	    let localctx = new Sentence_assign_contourContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, scsParser.RULE_sentence_assign_contour);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        localctx.a = this.idtf_system();
	        this.state = 100;
	        this.match(scsParser.T__51);
	        this.state = 101;
	        this.contour();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_lvl1_preffix() {
	    let localctx = new Idtf_lvl1_preffixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, scsParser.RULE_idtf_lvl1_preffix);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        localctx.type = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!(((((_la - 53)) & ~0x1f) === 0 && ((1 << (_la - 53)) & 1023) !== 0))) {
	            localctx.type = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_lvl1_value() {
	    let localctx = new Idtf_lvl1_valueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, scsParser.RULE_idtf_lvl1_value);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        localctx.type = this.idtf_lvl1_preffix();
	        this.state = 106;
	        this.match(scsParser.T__62);
	        this.state = 107;
	        localctx.i = this.match(scsParser.ID_SYSTEM);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_lvl1() {
	    let localctx = new Idtf_lvl1Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, scsParser.RULE_idtf_lvl1);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.idtf_lvl1_value();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_edge() {
	    let localctx = new Idtf_edgeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, scsParser.RULE_idtf_edge);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this.match(scsParser.T__63);
	        this.state = 112;
	        localctx.src = this.idtf_atomic();
	        this.state = 113;
	        localctx.c = this.connector();
	        this.state = 115;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        if(la_===1) {
	            this.state = 114;
	            localctx.attrs = this.attr_list();

	        }
	        this.state = 117;
	        localctx.trg = this.idtf_atomic();
	        this.state = 118;
	        this.match(scsParser.T__64);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_set() {
	    let localctx = new Idtf_setContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, scsParser.RULE_idtf_set);
	    try {
	        this.state = 128;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 66:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 120;
	            this.match(scsParser.T__65);
	            this.state = 121;
	            localctx.ctx_s = this.idtf_set_elements();
	            this.state = 122;
	            this.match(scsParser.T__66);
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 124;
	            this.match(scsParser.T__4);
	            this.state = 125;
	            localctx.ctx_v = this.idtf_set_elements();
	            this.state = 126;
	            this.match(scsParser.T__3);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_set_elements() {
	    let localctx = new Idtf_set_elementsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, scsParser.RULE_idtf_set_elements);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        if(la_===1) {
	            this.state = 130;
	            localctx.a1 = this.attr_list();

	        }
	        this.state = 133;
	        localctx.i1 = this.idtf_common();
	        this.state = 135;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===69) {
	            this.state = 134;
	            this.internal_sentence_list();
	        }

	        this.state = 147;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===68) {
	            this.state = 137;
	            this.match(scsParser.T__67);
	            this.state = 139;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	            if(la_===1) {
	                this.state = 138;
	                localctx.a2 = this.attr_list();

	            }
	            this.state = 141;
	            localctx.i2 = this.idtf_common();
	            this.state = 143;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===69) {
	                this.state = 142;
	                this.internal_sentence_list();
	            }

	            this.state = 149;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_atomic() {
	    let localctx = new Idtf_atomicContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, scsParser.RULE_idtf_atomic);
	    try {
	        this.state = 152;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 73:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 150;
	            localctx.a = this.idtf_alias();
	            break;
	        case 51:
	        case 53:
	        case 54:
	        case 55:
	        case 56:
	        case 57:
	        case 58:
	        case 59:
	        case 60:
	        case 61:
	        case 62:
	        case 72:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 151;
	            localctx.is = this.idtf_system();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_url() {
	    let localctx = new Idtf_urlContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, scsParser.RULE_idtf_url);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.match(scsParser.LINK);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_common() {
	    let localctx = new Idtf_commonContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, scsParser.RULE_idtf_common);
	    try {
	        this.state = 162;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 51:
	        case 53:
	        case 54:
	        case 55:
	        case 56:
	        case 57:
	        case 58:
	        case 59:
	        case 60:
	        case 61:
	        case 62:
	        case 72:
	        case 73:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 156;
	            localctx.a = this.idtf_atomic();
	            break;
	        case 64:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 157;
	            localctx.ie = this.idtf_edge();
	            break;
	        case 5:
	        case 66:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 158;
	            localctx.iset = this.idtf_set();
	            break;
	        case 74:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 159;
	            localctx.ct = this.contour();
	            break;
	        case 1:
	        case 76:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 160;
	            localctx.cn = this.content();
	            break;
	        case 77:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 161;
	            localctx.u = this.idtf_url();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idtf_list() {
	    let localctx = new Idtf_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, scsParser.RULE_idtf_list);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        localctx.i1 = this.idtf_common();
	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===69) {
	            this.state = 165;
	            this.internal_sentence_list();
	        }

	        this.state = 175;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 168;
	                this.match(scsParser.T__67);
	                this.state = 169;
	                localctx.i2 = this.idtf_common();
	                this.state = 171;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===69) {
	                    this.state = 170;
	                    this.internal_sentence_list();
	                }
	         
	            }
	            this.state = 177;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	internal_sentence() {
	    let localctx = new Internal_sentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, scsParser.RULE_internal_sentence);
	    try {
	        this.state = 185;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 3:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 8:
	        case 9:
	        case 10:
	        case 11:
	        case 12:
	        case 13:
	        case 14:
	        case 15:
	        case 16:
	        case 17:
	        case 18:
	        case 19:
	        case 20:
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 36:
	        case 37:
	        case 38:
	        case 39:
	        case 40:
	        case 41:
	        case 42:
	        case 43:
	        case 44:
	        case 45:
	        case 46:
	        case 47:
	        case 48:
	        case 49:
	        case 50:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 178;
	            localctx.c = this.connector();
	            this.state = 180;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	            if(la_===1) {
	                this.state = 179;
	                localctx.attrs = this.attr_list();
